# crewai-agentic-rag

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  ingest.py  main.py  pyproject.toml
.streamlit/: config.toml
data/: sample.md  sample.txt
src/: agents.py  chunker.py  config.py  crew.py  document_loader.py  tasks.py  vector_store.py
src/tools/: __init__.py  vector_search_tool.py
tests/: test_agents.py  test_document_loader.py  test_e2e.py  test_llm.py  test_tools.py  test_vector_store.py
